=== v0.3.2 - master
Plugin:
    * Improved API.
Autocomplete:
    * Reduced memory usage by 15 Mb with `A pool of strings vs id`.
    * Reduced the number of saved `String` from 10,701 to 6,433.

=== v0.3.1-alpha - cleanup
+ Plugins (debug) for Linux:
    * RAM
    * CPU
Autocomplete:
    + Global sources.
    * Redesigned element.
Start:
    + Open Project.

=== v0.3.0-alpha
+ Arguments.
+ Languages: RU, UA.
* Fixed memory leak.
* Fixed window title of renames file/folder.
* Required Java 10.
* Updated API.
CodeArea:
    + Auto adding `\` to `"""` combination, the same with `'`.
    + Remove same / mirror symbols with their pair.
    + The possibility of closing a paired symbol without moving the arrow.
    * Fixed removing selected area after Enter/Backspace/Semicolon.
Highlight:
    + `var` keyword.
    + Redesigned backlight. All code elements are now highlighted without basic keywords.
    * Fixed pairs.
Start:
    + Enter listeners to buttons.

=== v0.2.3
Autocomplete:
    + Class name to package info.
    + Clear `editWord` if input dot.
    + Hide snippet if focus is lost.
    + Make auto import.
    * Improved accuracy and speed auto adding paired characters.
    * Fixed scroll bar.
    * Fixed X position.
    - Flag of keywords.
CodeArea:
    + Auto adding space after pressed Enter.
    + Auto removing space after pressed Backspace.

=== v0.2.2
Autocomplete:
    + Classes / methods / variables to snippet.
    + Flags to item.
    + Package source to item.
    * Changed color of selected item.
    * Fixed height of snippet.
    * Fixed hide snippet if `options` is empty.
    * Fixed clean `editWord` after brackets.
    * Fixed scrolling on `codeArea`.
    * Fixed Y position.
    - `ScrollPane`.
CodeArea:
    + Ability to zoom.
Highlight:
    * Ignored `IndexOutOfBoundsException`.

=== v0.2.1
Autocomplete:
    + Automatic completion of characters `' " < ( { [`
    + Click on an element - select it.
    + Hover on items.