@@ -1,0 +1,9 @@
+package ru.mrchebik.plugin.debug.cpu;
+
+import lombok.AllArgsConstructor;
+
+@AllArgsConstructor
+public class UtimeTotalTime {
+    int utime;
+    int total_time;
+}
