@@ -3,7 +3,7 @@ package ru.mrchebik.plugin.debug.os;
 public interface OsPluginDebugWrapper {
     String[] getCommand();
 
-    String computeOutput(StringBuilder input);
+    Object computeOutput(StringBuilder input);
 
     boolean isSupported();
 }
